# ros

labs/lab1/ex01/: commands.txt
labs/lab2/ex01/: .bashrc
labs/lab2/ex03/: CMakeLists.txt  package.xml
labs/lab2/ex04/: colcon_build.txt
labs/lab2/ex05/: rosnode_info.txt  rosnode_list.txt
labs/lab2/ex08/: rqt_console.csv
labs/lab2/ex09/Porweks/: CMakeLists.txt  package.xml
labs/lab2/ex09/Porweks/srv/: .FullNameSumService.srv.swp
labs/lab2/ex10/: package.xml  setup.py
labs/lab2/ex10/text_to_cmd_vel/: cmd_to_text.py  text_to_cmd_vel.py
labs/lab3/ex01/FullNameSumService/: CMakeLists.txt  package.xml
labs/lab3/ex01/FullNameSumService/msg/: Fullnamemessage.msg
labs/lab3/ex01/service_full_name/: package.xml  setup.py
labs/lab3/ex01/service_full_name/service_full_name/: client.py  service.py
labs/lab3/ex02/action_desc/: CMakeLists.txt  package.xml
labs/lab3/ex02/action_server_client/: package.xml  setup.cfg  setup.py
labs/lab3/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml
labs/lab3/ex03/turtle_cmd_vel.mcap/: metadata.yaml  turtle_cmd_vel_0.db3
labs/lab3/ex05/move_to_goal/: package.xml  setup.py
labs/lab3/ex05/move_to_goal/move_to_goal/: move.py
labs/lab4/ex01/: last_transform.txt  transform.txt
labs/lab4/ex02/learning_tf2_py/: package.xml  setup.py
labs/lab4/ex02/learning_tf2_py/config/: carrot.rviz
labs/lab4/ex03/two_turtles/: package.xml  setup.cfg  setup.py
labs/lab5/ex01/: robot.urdf.xacro
labs/lab5/ex04/creeper_cycle/: package.xml  setup.cfg
labs/lab5/ex05/creeper_cycle/: setup.py
labs/lab6/ex05/robot_depth/: setup.py
(+17 files in other folders)
